--- a/section_4/code/Jenkinsfile
+++ b/section_4/code/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 
 		stage('Build') {
 			steps {
-				echo 'Building..${params.OracleVersion}'
+				echo "Building..${params.OracleVersion}"
 			}
 		}
 
