--- a/section_4/code/Jenkinsfile
+++ b/section_4/code/Jenkinsfile
@@ -1,9 +1,15 @@
 #!/usr/bin/groovy
 pipeline {
 	agent any
-	parameters {
-        	string(name: 'OracleVersion', defaultValue: '12', description: 'How should I greet the world?')
-    	}
+	node {
+    		envList = "Oracle12c\nOracle19c"
+	     }
+
+	 parameters {
+        	choice(choices: "${envList}", name: 'OracleVersion', description: 'please choose the Oracle version you want to deploy?')
+   
+   	 }
+	
 	stages {
 
 		stage('Build') {
