--- a/section_4/code/Jenkinsfile
+++ b/section_4/code/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
 	parameters{
             choice(choices: choiceArray.collect { "$it\n" }.join(' ') ,
                     description: '',
-                    name: 'SOME_CHOICE')
+                    name: 'OracleVersion')
 
 	}
 
