--- a/section_4/code/Jenkinsfile
+++ b/section_4/code/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 	
 
 	 parameters {
-        	choice(choices: "${envList}", name: 'OracleVersion', description: 'please choose the Oracle version you want to deploy?')
+        	choice(choices: ['greeting' , 'silence'], name: 'OracleVersion', description: 'please choose the Oracle version you want to deploy?')
    
    	 }
 
