--- a/section_4/code/Jenkinsfile
+++ b/section_4/code/Jenkinsfile
@@ -4,7 +4,9 @@
     		envList = "Oracle12c\nOracle19c"
 
 pipeline {
-	agent any
+	agent {
+        	docker { image 'node:14-alpine' }
+    	}
 	
 
 	 parameters {
